--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "next": "^15.1.4",
     "next-intl": "^3.26.2",
     "react": "^18.3.1",
